attempt to fix height on mobile safari

--- a/styles.css
+++ b/styles.css
@@ -151,6 +151,7 @@ a:visited{
     .main-container{
         text-align: center;
         text-align: -webkit-center;
+        height: 100%;
     }
 
     .apropos-container{
